@@ -48,6 +48,7 @@ Changes in 2.8
 - check if student already enrolled on that date when updating START_DATE in Enrollment.inc.php & AssignOtherInfo.php
 - reset current school if updating self schools in User.php
 - move tipmessage CSS (#Migoicons) & jscalendar stylesheet import from Warehouse.php to stylesheet.css
+- Add Admin checks for SetUserStaffID() & SetUserStudentID() functions in Current.php & Side.php
 
 Upgrade from 2.7.x
 ------------------
